# cohort_projections

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  BIGQUERY_DATA_SUMMARY.md  CLAUDE.md  DEVELOPMENT_TRACKER.md  FERTILITY_IMPLEMENTATION_SUMMARY.md  GEOGRAPHIC_MODULE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OUTPUT_MODULE_IMPLEMENTATION.md  PARALLEL_IMPLEMENTATION_SUMMARY.md  PIPELINE_IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  RCLONE_TEST  README.md  REPOSITORY_INVENTORY.md  SESSION_CONTINUATION_SUMMARY.md  SESSION_SUMMARY.md  pyproject.toml  requirements.txt
.claude/commands/: experiment-sweep.md  experiment.md  sync.md
cohort_projections/: __init__.py  version.py
cohort_projections/analysis/: __init__.py  benchmark_contract.py  benchmarking.py  evaluation_policy.py  experiment_log.py
cohort_projections/config/: __init__.py  race_mappings.py
cohort_projections/core/: ARCHITECTURE.md  QUICKSTART.md  README.md  __init__.py  cohort_component.py  fertility.py  migration.py  mortality.py
cohort_projections/data/: __init__.py  popest_shared.py
cohort_projections/geographic/: README.md  __init__.py  geography_loader.py  multi_geography.py
cohort_projections/output/: README.md  __init__.py  reports.py  visualizations.py  writers.py
cohort_projections/utils/: __init__.py  bigquery_client.py  config_loader.py  demographic_utils.py  fips.py  logger.py  reproducibility.py  sdc_paths.py
config/: benchmark_evaluation_policy.yaml  data_sources.yaml  evaluation_config.yaml  experiment_log_schema.yaml  experiment_spec_schema.yaml  nd_brand.yaml  observatory_config.yaml  observatory_recipes.yaml  observatory_search_policy.yaml  observatory_variants.yaml  projection_config.yaml
config/method_profiles/: aliases.yaml  m2026__cfg-20260223-baseline-v1.yaml  m2026r1__cfg-20260309-blend-30.yaml  m2026r1__cfg-20260309-blend-70.yaml  m2026r1__cfg-20260309-college-fix-v1.yaml  m2026r1__cfg-20260309-dampening-peak-30.yaml  m2026r1__cfg-20260309-dampening-peak-35.yaml  m2026r1__cfg-20260309-medium-hold-4.yaml  m2026r1__cfg-20260309-medium-hold-5.yaml  m2026r1__cfg-20260611-blend-100.yaml  m2026r1__cfg-20260611-gq-fraction-075.yaml  m2026r1__cfg-20260611-production-lock.yaml  m2026r1__cfg-20260611-williams-out.yaml  sdc_2024__cfg-20260309-sdc-reference-v1.yaml
config/observatory_search_packs/: cf001.yaml
data/: DATA_MANIFEST.md  DATA_VALIDATION_REPORT.md  README.md
docs/: BIGQUERY_SETUP.md  GIT_RCLONE_SYNC.md  INDEX.md  NAVIGATION.md  REPOSITORY_EVALUATION.md  REPOSITORY_HYGIENE_IMPLEMENTATION_PLAN.md  census_api_usage.md  census_bureau_methodology_reference.md  methodology.md  methodology_analysis_cohort_vs_agegroup.md  methodology_comparison_sdc_2024.md  methodology_writing_plan.md
docs/adr/: 001-fertility-rate-processing.md  004-core-projection-engine-architecture.md  005-configuration-management-strategy.md  011-testing-strategy.md  013-multi-geography-projection-design.md  014-pipeline-orchestration-design.md  015-output-format-visualization-design.md  016-raw-data-management-strategy.md  017-sdc-2024-methodology-comparison.md  018-immigration-policy-scenario-methodology.md  019-argument-mapping-claim-review-process.md  019-extended-time-series-methodology-analysis.md  019a-vintage-methodology-investigation-plan.md  021-immigration-status-durability-methodology.md  README.md  TEMPLATE.md
docs/analysis/: census_pep_metadata_schema_guide.md  pep_vintage_differences_migration.md
docs/archive/: BIGQUERY_DATA_SUMMARY.md  DEVELOPMENT_TRACKER_2026-02-26.md  FERTILITY_IMPLEMENTATION_SUMMARY.md  GEOGRAPHIC_MODULE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OUTPUT_MODULE_IMPLEMENTATION.md  PARALLEL_IMPLEMENTATION_SUMMARY.md  PIPELINE_IMPLEMENTATION_SUMMARY.md  README.md  REPOSITORY_HYGIENE_TRACKER.md  SESSION_CONTINUATION_SUMMARY.md  SESSION_SUMMARY.md
docs/guides/: README.md  benchmarking-workflow.md  compute-runtime-reference.md  configuration-reference.md  data-sources-workflow.md  environment-setup.md  gpt-5.5-pro-api-reference.md  observatory-autonomous-search.md  observatory-search-loop.md  observatory-start-here.md  test-maintenance-practices.md  test-suite-reference.md  testing-workflow.md  troubleshooting.md
docs/plans/: README.md  audit-implementation-plan-and-findings.md  benchmarking-p0-implementation-plan.md  benchmarking-process-improvement-roadmap.md  census-method-assessment-and-path-forward.md  convergence-interpolation-scaling-factors.md  evaluation-blueprint.md  experiment-catalog.md  f4-decomposition-reproducibility.md  implementation-plan-census-method-upgrade.md  observatory-resilience-hardening-plan.md  observatory-ui-ux-backlog.md  population-projection-explosion-bug-investigation-2026-02-13.md  pp3-s08-implementation-kickoff.md
docs/postmortems/: cdc_wonder_data_extraction_20260223.md
docs/reference/: geographic-hierarchy.md  (+1 more)
docs/sops/: README.md  (+2 more)
examples/: fetch_census_data.py  generate_outputs_example.py  process_fertility_example.py  process_migration_example.py  process_survival_example.py  run_basic_projection.py  run_multi_geography_example.py
libs/codebase_catalog/: README.md  pyproject.toml
libs/codebase_catalog/codebase_catalog/: __init__.py
libs/codebase_catalog/codebase_catalog/cli/: check_data_manifest.py  update_code_inventory.py
libs/evidence_review/: README.md  pyproject.toml
libs/evidence_review/evidence_review/: __init__.py
libs/project_utils/: README.md  pyproject.toml
libs/project_utils/project_utils/: __init__.py  config.py  logging.py
observatory_wireframe/: app.jsx  data.js  decision_brief.jsx  home.jsx  index.html  ndmap_gis.jsx  styles.css  ui.jsx  views.jsx
scripts/: DEPENDENCIES.md  README.md  bisync.sh  check_test_coverage.py  extract_sdc_fertility_rates.py  fetch_data.py  generate_article_pdf.py  generate_visualizations_and_reports.py  process_nd_migration.py  run_integration_test.py  setup_rclone_bisync.sh  validate_data.py
sdc_2024_replication/: DATA_UPDATE_PLAN.md  GETTING_STARTED.md  METHODOLOGY_SPEC.md  README.md  update_audit_method.py
tests/: _sdc_paths.py  conftest.py
(+1664 files in other folders)
