[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cohort_projections"
version = "0.1.0"
description = "North Dakota cohort component population projections 2025-2045"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["demographics", "population", "projections", "cohort-component", "north-dakota"]

dependencies = [
    # Core data science
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    # Data acquisition
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    # Google BigQuery
    "google-cloud-bigquery>=3.11.0",
    "google-auth>=2.22.0",
    "db-dtypes>=1.1.1",
    # Configuration
    "pyyaml>=6.0",
    # Excel export
    "openpyxl>=3.1.0",
    "psycopg2-binary>=2.9.11",
    "pathspec>=0.12.1",
    "sqlalchemy>=2.0.45",
    # Core analysis (canonical versions - also in optional stats group)
    "matplotlib>=3.10.0",
    "scipy>=1.13.0",
    "statsmodels>=0.14.6",
    # Internal packages
    "project-utils",
    "evidence-review",
    "codebase-catalog",
    "pdfplumber>=0.11.8",
    "ocrmypdf>=16.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
]
viz = [
    "matplotlib>=3.10.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
]
geo = [
    "geopandas>=0.13.0",
    "shapely>=2.0.0",
]
stats = [
    # Statistical analysis packages (versions match main dependencies)
    "statsmodels>=0.14.6",
    "scipy>=1.13.0",
    "arch>=6.0",
    "ruptures>=1.1",
    "pmdarima>=2.0",
    "linearmodels>=5.0",
    "scikit-learn>=1.3",
    # Survival analysis (Module 8/8b)
    "lifelines>=0.27.0",
]
bayesian = [
    # Bayesian inference (Phase B - approved 2026-01-01)
    "pymc>=5.10",
    "arviz>=0.17",
]
pdf_export = [
    # PDF generation utilities
    "weasyprint>=67.0",
    "markdown>=3.10",
]
excel_io = [
    # Legacy Excel file support (.xls format)
    "xlrd>=2.0.2",
]
all = [
    "cohort_projections[dev,viz,geo,stats,bayesian,pdf_export,excel_io]",
]

[project.urls]
Homepage = "https://github.com/nigel/cohort_projections"
Documentation = "https://github.com/nigel/cohort_projections#readme"
Repository = "https://github.com/nigel/cohort_projections"
Issues = "https://github.com/nigel/cohort_projections/issues"

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["sdc_2024_replication"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PIE",    # flake8-pie
    "DTZ",    # flake8-datetimez
]
ignore = [
    "E501",      # Line too long - Ruff formatter handles this
    "PLR2004",   # Magic value comparison - acceptable for demographic constants
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert statements in tests
    "PLR2004", # Allow magic values in tests
    "D",       # Ignore docstring requirements in tests
    "E402",    # Allow imports after sys.path modification (needed for module path setup)
    "N806",    # Allow uppercase variable names (X, Y, T for matrices)
    "SIM108",  # Allow if-else blocks for readability in fixtures
]
"scripts/**/*.py" = [
    "T201",    # Allow print statements in scripts
    "PLR2004", # Allow magic values in scripts
    "D",       # Ignore docstring requirements in scripts
    "N999",    # Allow invalid module names (numbered scripts for ordering)
]
# Legacy Phase A research scripts from ADR-019/020 investigation (deprecated 2026-01-01)
# These are one-time exploratory analysis scripts, not production code.
# File-specific exemptions to avoid bypassing linting for future docs/adr Python files.
"docs/governance/adrs/020-reports/agent2_analysis.py" = [
    "N803",    # Argument name should be lowercase (X, RSS_full, etc.)
    "N806",    # Variable in function should be lowercase (RSS1, RSS2, F_stat, etc.)
    "T201",    # Allow print statements
    "D",       # Ignore docstring requirements
    "F841",    # Unused variable (stds)
    "C408",    # Unnecessary dict call
    "DTZ005",  # datetime.now() without tz
]
"docs/governance/adrs/020-reports/agent3_analysis.py" = [
    "T201",    # Allow print statements
    "D",       # Ignore docstring requirements
    "F841",    # Unused variable (trans_row)
    "SIM108",  # Use ternary operator
    "E712",    # Comparison to True (== True)
    "UP038",   # Use X | Y in isinstance
]
# Legacy Phase A research scripts from ADR-021 investigation (deprecated 2026-01-01)
# These are one-time exploratory analysis scripts for validating external AI recommendations.
"docs/governance/adrs/021-reports/agent1_estimand_composition.py" = [
    "N803",    # Argument name should be lowercase
    "N806",    # Variable in function should be lowercase
    "T201",    # Allow print statements
    "D",       # Ignore docstring requirements
    "F841",    # Unused variable
]
"docs/governance/adrs/021-reports/agent2_lssnd_impact.py" = [
    "N803",    # Argument name should be lowercase
    "N806",    # Variable in function should be lowercase
    "T201",    # Allow print statements
    "D",       # Ignore docstring requirements
    "F841",    # Unused variable
    "C408",    # Unnecessary dict call
]
"docs/governance/adrs/021-reports/agent3_module_gap_analysis.py" = [
    "T201",    # Allow print statements
    "D",       # Ignore docstring requirements
]
"docs/governance/adrs/021-reports/agent4_data_availability.py" = [
    "T201",    # Allow print statements
    "D",       # Ignore docstring requirements
]
# SDC 2024 replication study - historical research scripts
# These are exploratory analysis scripts for a completed study, not production code.
"sdc_2024_replication/**/**.py" = [
    "E402",    # Allow imports after sys.path modification
    "E722",    # Allow bare except (legacy code)
    "T201",    # Allow print statements
    "D",       # Ignore docstring requirements
    "N803",    # Allow uppercase argument names
    "N806",    # Allow uppercase variable names
    "F841",    # Allow unused variables
    "PLR2004", # Allow magic values
]

[tool.ruff.lint.isort]
known-first-party = ["cohort_projections"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# MyPy Configuration
# =============================================================================
# Note: Using relaxed settings initially. Strict mode can be enabled
# incrementally as type annotations are added to the codebase.
[tool.mypy]
python_version = "3.11"
# Relaxed settings for initial adoption
strict = false
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
# Ignore missing imports for libraries without stubs
ignore_missing_imports = true
exclude = [
    "examples/",
    "tests/",
    "docs/",
    "docs/governance/",
    "venv/",
    ".venv/",
    "sdc_2024_replication/",
]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "pyarrow.*",
    "geopandas.*",
    "shapely.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "google.cloud.*",
    "google.auth.*",
    "db_dtypes.*",
    "tqdm.*",
    "openpyxl.*",
    "yaml.*",
    "requests",
    "requests.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=cohort_projections",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "data_fetch: marks tests that fetch external data",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["cohort_projections"]
branch = true
omit = [
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/tests/*",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# Setuptools Configuration
# =============================================================================
[tool.setuptools.packages.find]
where = ["."]
include = ["cohort_projections*"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.setuptools.package-data]
cohort_projections = ["py.typed", "*.yaml", "*.yml"]

[tool.uv.sources]
project-utils = { path = "libs/project_utils", editable = true }
evidence-review = { path = "libs/evidence_review", editable = true }
codebase-catalog = { path = "libs/codebase_catalog", editable = true }

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
