[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-catalog"
version = "0.1.0"
description = "Repository scanning and inventory tools (vendored minimal build for this repo)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "psycopg2-binary>=2.9.11",
  "pathspec>=0.12.1",
]

[project.scripts]
update-code-inventory = "codebase_catalog.cli.update_code_inventory:main"
check-data-manifest = "codebase_catalog.cli.check_data_manifest:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codebase_catalog*"]
