[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evidence-review"
version = "0.1.0"
description = "Evidence review utilities (vendored minimal build for this repo)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["evidence_review*"]
